<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.store.FinalPaymentFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bar"
        android:background="@color/green"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_150sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:paddingTop="@dimen/_50sdp"
                android:text="@string/payment"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/books"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/books"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/cart"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/cart"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/books" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_150sdp"
        app:layout_constraintTop_toBottomOf="@+id/bar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cartLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/bar">

                <ImageView
                    android:id="@+id/mtn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/boy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/sufficient"
                    tools:layout_editor_absoluteX="13dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/topics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/green"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/details"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15ssp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/com"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/green"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/detailLog"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintTop_toBottomOf="@+id/topics" />


                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:background="@color/green"
                            android:gravity="center"
                            android:hint="@string/number"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/com" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/round_bg"
                    app:backgroundTint="@null"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/pay"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintTop_toBottomOf="@+id/card" />


                <TextView
                    android:id="@+id/specific"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_marginTop="93dp"
                    android:text="@string/specific"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@+id/mtn" />

                <TextView
                    android:id="@+id/sufficient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/sufficient"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@+id/specific" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/round_bg"
                android:gravity="center"
                android:backgroundTint="@color/white"
                android:layout_margin="@dimen/_5sdp"
                android:inputType="textCapSentences"
                android:padding="@dimen/_5sdp"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@+id/editText" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>